<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.secondtest.MainActivity">
    <item
        android:id="@+id/FirstPage"
        android:onClick="doThis"
        android:orderInCategory="100"
        android:title="FirstPage"
        app:showAsAction="never" />
    <item
        android:id="@+id/SecondPage"
        android:onClick="second"
        android:orderInCategory="100"
        android:title="RobotInput"
        app:showAsAction="never" />
</menu>
